# kpn-genai-case

./: .dockerignore  .env.template  .gitignore  README.md  portforward.ps1  pyproject.toml  runkubernetes.ps1
data/: invoice_023.tiff  invoice_030.tiff
docker/: backend.Dockerfile  frontend.Dockerfile
exercise/: exercise.md
frontend/: .env.example  index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
graphs/: invoice_graph.mmd
helm/kpn-genai/: Chart.yaml  values.yaml
helm/kpn-genai/templates/: NOTES.txt  _helpers.tpl  deployment-backend.yaml  deployment-frontend.yaml  service-backend.yaml  service-frontend.yaml
scripts/: export_invoice_graph.py
src/: deps.py  main.py
src/config/: policy.yaml
src/controllers/: invoices.py
src/models/: app_schemas.py  extraction_schemas.py  policy_schemas.py
src/routers/: invoices.py  policy.py
src/service/: graph.py  graph_nodes.py  ingest.py  invoice_policy.py  invoice_service.py  llm_config.py  prompts.py  temp_storage.py
